Changed: Moved Config files into their own subfolder

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -86,13 +86,61 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="About.cs">
+    <Compile Include="cache.cs" />
+    <Compile Include="Configuration\About.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="About.Designer.cs">
+    <Compile Include="Configuration\About.designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
-    <Compile Include="cache.cs" />
+    <Compile Include="Configuration\ChooseFromSelection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\ChooseFromSelection.designer.cs">
+      <DependentUpon>ChooseFromSelection.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\ExpressionBuilder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\ExpressionBuilder.designer.cs">
+      <DependentUpon>ExpressionBuilder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\GUIConfiguration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\GUIConfiguration.designer.cs">
+      <DependentUpon>GUIConfiguration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\loadingDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\loadingDisplay.designer.cs">
+      <DependentUpon>loadingDisplay.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\LocationBrowser.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Configuration\LocationBrowser.Designer.cs">
+      <DependentUpon>LocationBrowser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\logoConfigurator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\logoConfigurator.designer.cs">
+      <DependentUpon>logoConfigurator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\logoTemplate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\logoTemplate.Designer.cs">
+      <DependentUpon>logoTemplate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Configuration\ManualEpisodeManagementPane.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Configuration\ManualEpisodeManagementPane.Designer.cs">
+      <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
+    </Compile>
     <Compile Include="DB Classes\DBNewzbin.cs" />
     <Compile Include="DB Classes\DBReplacements.cs" />
     <Compile Include="DB Classes\DBTorrent.cs" />
@@ -100,29 +148,11 @@
     <Compile Include="Downloaders\DownloadMonitor.cs" />
     <Compile Include="Downloaders\IDownloaders.cs" />
     <Compile Include="Downloaders\newzbin.cs" />
-    <Compile Include="ExpressionBuilder.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ExpressionBuilder.Designer.cs">
-      <DependentUpon>ExpressionBuilder.cs</DependentUpon>
-    </Compile>
     <Compile Include="Fanart.cs" />
     <Compile Include="feedback.cs" />
     <Compile Include="FieldGetter.cs" />
-    <Compile Include="GUIConfiguration.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GUIConfiguration.designer.cs">
-      <DependentUpon>GUIConfiguration.cs</DependentUpon>
-    </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="imageAllocator.cs" />
-    <Compile Include="loadingDisplay.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="loadingDisplay.Designer.cs">
-      <DependentUpon>loadingDisplay.cs</DependentUpon>
-    </Compile>
     <Compile Include="Local Parsing Classes\LocalParse.cs" />
     <Compile Include="Local Parsing Classes\ManualParseDialog.cs">
       <SubType>Form</SubType>
@@ -131,24 +161,6 @@
       <DependentUpon>ManualParseDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="localLogos.cs" />
-    <Compile Include="LocationBrowser.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="LocationBrowser.Designer.cs">
-      <DependentUpon>LocationBrowser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="logoConfigurator.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="logoConfigurator.designer.cs">
-      <DependentUpon>logoConfigurator.cs</DependentUpon>
-    </Compile>
-    <Compile Include="logoTemplate.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="logoTemplate.Designer.cs">
-      <DependentUpon>logoTemplate.cs</DependentUpon>
-    </Compile>
     <Compile Include="LogWriter.cs" />
     <Compile Include="DB Classes\DBBase.cs" />
     <Compile Include="DB Classes\DBEpisode.cs" />
@@ -164,12 +176,6 @@
     <Compile Include="DB Classes\DBSeries.cs" />
     <Compile Include="Local Parsing Classes\Filelister.cs" />
     <Compile Include="Local Parsing Classes\ParserFilename.cs" />
-    <Compile Include="ManualEpisodeManagementPane.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="ManualEpisodeManagementPane.Designer.cs">
-      <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
-    </Compile>
     <Compile Include="MathParser.cs" />
     <Compile Include="MediaInfoDLL.cs" />
     <Compile Include="Online Parsing Classes\GetBanner.cs" />
@@ -190,12 +196,6 @@
     <Compile Include="Subtitle Retrievers Classes\Forom.cs" />
     <Compile Include="Subtitle Retrievers Classes\Remository.cs" />
     <Compile Include="Subtitle Retrievers Classes\unrar.cs" />
-    <Compile Include="ChooseFromSelection.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ChooseFromSelection.Designer.cs">
-      <DependentUpon>ChooseFromSelection.cs</DependentUpon>
-    </Compile>
     <Compile Include="Downloaders\Torrent.cs" />
     <Compile Include="Translation.cs" />
     <Compile Include="TVSeriesPlugin.cs" />
@@ -203,50 +203,50 @@
     <Compile Include="view.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="About.resx">
+    <EmbeddedResource Include="Configuration\About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="ExpressionBuilder.resx">
+    <EmbeddedResource Include="Configuration\ChooseFromSelection.resx">
+      <DependentUpon>ChooseFromSelection.cs</DependentUpon>
       <SubType>Designer</SubType>
-      <DependentUpon>ExpressionBuilder.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GUIConfiguration.resx">
+    <EmbeddedResource Include="Configuration\ExpressionBuilder.resx">
+      <DependentUpon>ExpressionBuilder.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\GUIConfiguration.resx">
       <DependentUpon>GUIConfiguration.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="loadingDisplay.resx">
-      <SubType>Designer</SubType>
+    <EmbeddedResource Include="Configuration\loadingDisplay.resx">
       <DependentUpon>loadingDisplay.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\LocationBrowser.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>LocationBrowser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\logoConfigurator.resx">
+      <DependentUpon>logoConfigurator.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\logoTemplate.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>logoTemplate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\ManualEpisodeManagementPane.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Local Parsing Classes\ManualParseDialog.resx">
       <SubType>Designer</SubType>
       <DependentUpon>ManualParseDialog.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LocationBrowser.resx">
-      <DependentUpon>LocationBrowser.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="logoConfigurator.resx">
-      <DependentUpon>logoConfigurator.cs</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="logoTemplate.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>logoTemplate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ManualEpisodeManagementPane.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ManualEpisodeManagementPane.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <SubType>Designer</SubType>
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ChooseFromSelection.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ChooseFromSelection.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
