--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -97,7 +97,7 @@
     </Reference>
     <Reference Include="Dialogs, Version=0.2.3.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\MP2\xbmc\bin\Release\Dialogs.dll</HintPath>
+      <HintPath>bin\release\Dialogs.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.84.0.0, Culture=neutral, PublicKeyToken=1b03e6acf1164f73">
       <SpecificVersion>False</SpecificVersion>
@@ -177,6 +177,7 @@
     <Compile Include="Configuration\DBOptionCheckBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DB Classes\DBFanart.cs" />
     <Compile Include="DB Classes\DBFormatting.cs" />
     <Compile Include="DB Classes\DBNewzbin.cs" />
     <Compile Include="DB Classes\DBReplacements.cs" />
@@ -186,6 +187,7 @@
     <Compile Include="Downloaders\IDownloaders.cs" />
     <Compile Include="Downloaders\newzbin.cs" />
     <Compile Include="Fanart.cs" />
+    <Compile Include="FanartChooser.cs" />
     <Compile Include="feedback.cs" />
     <Compile Include="FieldGetter.cs" />
     <Compile Include="Helper.cs" />
