Subtitle retrievers updated. Removed Forom (well, commented out) since it wasn't really working anymore I think. Instead I added TVSubtitles.net, a website with most of the current tvshow available in multiple languages. In the configuration page one can select which languages to scan, and only those will be listed in the app.

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Subtitle Retrievers Classes\Forom.cs" />
     <Compile Include="Subtitle Retrievers Classes\Remository.cs" />
     <Compile Include="Subtitle Retrievers Classes\seriessubs.cs" />
+    <Compile Include="Subtitle Retrievers Classes\tvsubtitles.cs" />
     <Compile Include="Subtitle Retrievers Classes\unrar.cs" />
     <Compile Include="Downloaders\Torrent.cs" />
     <Compile Include="Translation.cs" />
