Issue 68: Added ability to create Simple Views from Configuration or with-in MediaPortals GUI.
Simple Views are basically just views that list series contain a particular tag, series can have multiple tags e.g. |Kids Shows|Family Shows| or |Adults Only| etc
 
Should consider moving Favourites view to the new Simple View (i.e. add as a tag-> |Favourites|)

Dialog in configuration currently only allows creation of simple views, Advanced Views that allow you make views based on conditions is disabled for now...

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -204,6 +204,9 @@
     <Compile Include="Configuration\AddImportPathPopup.designer.cs">
       <DependentUpon>AddImportPathPopup.cs</DependentUpon>
     </Compile>
+	<Compile Include="Configuration\ViewsConfiguration.Designer.cs">
+      <DependentUpon>ViewsConfiguration.cs</DependentUpon>
+    </Compile>
     <Compile Include="DB Classes\DBFanart.cs" />
     <Compile Include="DB Classes\DBFormatting.cs" />
     <Compile Include="DB Classes\DBNewzbin.cs" />
@@ -339,6 +342,10 @@
     </EmbeddedResource>
 	<EmbeddedResource Include="Configuration\AddImportPathPopup.resx">
       <DependentUpon>AddImportPathPopup.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+	<EmbeddedResource Include="Configuration\ViewsConfiguration.resx">
+      <DependentUpon>ViewsConfiguration.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Online Parsing Classes\APIKey.resx">
